fixed doctors on clinic index page

--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -27,41 +27,41 @@
   </div>
  
         <!--======= CLINIC =====-->
-        <div id="section-i" class="tm-bg-white tm-pt-20 m-0">
+        <div id="section-i" class="tm-bg-white tm-pt-20">
           <div class="container">
               <div class="row">
-                  <div class="col-sm-10 col-md-10 col-lg-7 col-xl-7 p-5 mt-5">
+                  <div class="col-sm-10 col-md-10 col-lg-8 col-xl-8 p-5 mt-5">
                       <div class="tm-section-title">Merkezimi Neden Dialysing.com'da Listelemeliyim?</div>
                       <div class="clinic-content "> 
-                          <div class="col d-flex align-items-start">
+                          <div class="col d-flex align-items-start mt-3">
                             <img src="../user/img/clinic/icons/visibility.png" class="flex-shrink-0 me-2 mb-2" alt="Visibility Icon" />
                             <div>
                               <div class="clinic-text-description mb-2">Yüzlerce ülkeden uluslararası tatil diyalizi hastalara çevrimiçi görünürlük ve erişim imkanı</div>
                             </div>
                           </div>
 
-                          <div class="col d-flex align-items-start">
+                          <div class="col d-flex align-items-start mt-3">
                             <img src="../user/img/clinic/icons/profile.png" class="flex-shrink-0 me-2 mb-2" alt="Visibility Icon" />
                             <div>
                               <div class="clinic-text-description mb-2">En çok görüntülenen diyaliz merkezlerinin bulunduğu güvenilir platformda kişisel merkez profili</div>
                             </div>
                           </div>
 
-                          <div class="col d-flex align-items-start">
+                          <div class="col d-flex align-items-start mt-3">
                             <img src="../user/img/clinic/icons/language.png" class="flex-shrink-0 me-2 mb-2" alt="Visibility Icon" />
                             <div>
                               <div class="clinic-text-description mb-2">Birçok dilde hizmet sunan platformda global olarak hastalarınıza direk randevu imkanı</div>
                             </div>
                           </div>
 
-                          <div class="col d-flex align-items-start">
+                          <div class="col d-flex align-items-start mt-3">
                             <img src="../user/img/clinic/icons/picture.png" class="flex-shrink-0 me-2 mb-2" alt="Visibility Icon" />
                             <div>
                               <div class="clinic-text-description mb-2">Merkezinize özel tanıtım sayfanınızı dilediğiniz gibi düzenleyebilme ve ekstra fotoğraflar ekleyebilme imkanı</div>
                             </div>
                           </div> 
 
-                          <div class="col d-flex align-items-start mx-2">
+                          <div class="col d-flex align-items-start mx-2 mt-3">
                             <img src="../user/img/clinic/icons/attachment.png" class="flex-shrink-0 me-3 mb-2 mt-2" alt="Visibility Icon" />
                             <div>
                               <div class="clinic-text-description mb-2">Merkezinize gelecek hastaların diyaliz sürecine kolayca karar verebilmeniz adına özenle düşünülerek belirlenmiş hasta bilgilerine ulaşım imkanı</div>
@@ -77,7 +77,7 @@
         <div id="section-ii" class="tm-p-10">
           <div class="container">
               <div class="row">
-                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex align-items-start">
                       <div class="tm-clinic-box">
                           <div class="row">
                               <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
@@ -93,7 +93,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex align-items-start">
                       <div class="tm-clinic-box">
                           <div class="row">
                               <div class="col-sm-12 col-md-12 col-lg-5 col-xl-5">
