--- a/public/user/css/clinic/clinic.css
+++ b/public/user/css/clinic/clinic.css
@@ -83,12 +83,11 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 0.5rem;
 }
 .clinic-text-description {
   font-family: 'Montserrat', sans-serif;
   color: #000000;
-  font-size: 13px;
+  font-size: 16px;
   line-height: 1.5rem;
 }
 .tm-section-title {
@@ -126,12 +125,15 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 2rem !important;
 }
 
 .tm-clinic-box .tm-clinic-box-content .tm-clinic-box-text {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .tm-steps {
