--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -119,34 +119,34 @@
               <div class="row">
                   <div class="col text-center">
                       <h2 class="tm-section-title">Güveninizle büyüyoruz!</h2>
-                      <p class="tm-text">
+                      <p class="tm-text px-5 pr-5 pe-5">
                           40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve
                           kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde
                           diyaliz rezervasyonunuzu <span class="logo">Dialysing<span class="com">.com</span></span> ile yapabilirsiniz
                       </p>
                       <div class="tm-center">
-                          <div class="circle-content">
+                          <div class="circle-content mx-2">
                               <div class="circle">
                                   <img src="../user/img/icons/map.png" alt="Icon Map" />
                               </div>
                               <div class="clinic-number">40+</div>
                               <div class="clinic-prop">Ülke</div>
                           </div>
-                          <div class="circle-content">
+                          <div class="circle-content mx-2">
                               <div class="circle">
                                   <img src="../user/img/icons/language.png" alt="Icon Language" />
                               </div>
                               <div class="clinic-number">20+</div>
                               <div class="clinic-prop">Dil</div>
                           </div>
-                          <div class="circle-content">
+                          <div class="circle-content mx-2">
                               <div class="circle">
                                   <img src="../user/img/icons/hospital.png" alt="Icon Hospital" />
                               </div>
                               <div class="clinic-number">10+</div>
                               <div class="clinic-prop">Klinik</div>
                           </div>
-                          <div class="circle-content">
+                          <div class="circle-content mx-2">
                               <div class="circle">
                                   <img src="../user/img/icons/hospital-2.png" alt="Icon Hospital 2" />
                               </div>
@@ -164,9 +164,9 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div class="tm-section-title">Sık Sorulan Sorular</div>
+          <div class="tm-section-title mb-3">Sık Sorulan Sorular</div>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mb-2">
           <div class="form-group">
             <h2 class="accordion-header" id="headingTwo">
               <button class="btn btn-dropdown small dropdown-toggle faq" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Dialysing.com üyeliği ücretli mi?</button>
@@ -177,7 +177,7 @@
           </div>
         </div>
 
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mb-2">
           <div class="form-group">
             <h2 class="accordion-header" id="headingThree">
               <button class="btn btn-dropdown small dropdown-toggle faq" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Merkezim ne zaman online duruma gelecek?</button>
@@ -189,7 +189,7 @@
         </div>
       </div>
       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class="tm-text">Sorunuza cevap bulamadınız mı? <a href="#">Sık Sorulan Sorular</a> sayfamızı ziyaret edin.</div>
+        <div class="tm-text">Sorunuza cevap bulamadınız mı?<a href="#">Sık Sorulan Sorular</a> sayfamızı ziyaret edin.</div>
       </div>
     </div>
   </div>
