--- a/public/user/css/clinic/clinic.css
+++ b/public/user/css/clinic/clinic.css
@@ -99,7 +99,17 @@
   display: flex;
   align-items: center;
 }
-
+.accordion-header button {
+  font-size: 14px !important;
+  color: #28353E; 
+  font-family: 'Montserrat', sans-serif;
+}
+.accordion-body {
+  font-size: 13px;
+  color: #28353E; 
+  font-family: 'Montserrat', sans-serif;
+  line-height: 2rem;
+}
 .clinic-content .clinic-icon .clinic-text {
   width: 93%;
 }
