finished fixed style center index page

--- a/public/user/css/clinic/style.css
+++ b/public/user/css/clinic/style.css
@@ -1134,7 +1134,7 @@ select.form-control {
   font-size: 1rem;
   font-weight: 300;
   margin-bottom: 25px;
-  color: #28353e;
+  color: #28353eb9;
 }
 
 .tm-section-subtitle-2 {
