--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -160,7 +160,7 @@
       </div>
 
   <!-- ======FAQ====== -->
-  <div id="section-iv" class="tm-p">
+  <div id="section-iv" class="tm-p my-5 mt-5 mb-5 py-5">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
