--- a/src/views/user/partials/footer.ejs
+++ b/src/views/user/partials/footer.ejs
@@ -6,7 +6,7 @@
           <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="/">Dialysing<span>.com</span></a>
         </h5>
         <ul class="nav flex-column">
-          <li key="footerTitle" class="nav-item mb-2">Eleifend eleifend vel lobortis arcu quam mattis sodales turpis ornare at dictumst in</li>
+          <li key="footerTitle" class="nav-item footerTitle mb-2">Eleifend eleifend vel lobortis arcu quam mattis sodales turpis ornare at dictumst in</li>
           <li class="nav-item social mb-2 mt-2">
             <img src="../user/img/socials/facebook.png" alt="" />
             <img src="../user/img/socials/instagram.png" alt="" />
