--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -16,7 +16,7 @@
             <!-- <div class="inner-content"> -->
               <div class="tm-header-title mt-5">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
               <div class="tm-header-text">Sizlerde kliniğinizi sistemimize dahil ederek Dialysing.com ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
-              <button href="/panel/choose-personel" class="btn-second">Merkezinizi Ekleyin</button>
+              <a href="/panel/choose-personel"><button class="btn-second">Merkezinizi Ekleyin</button></a>
             </div> 
           <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 banner ie-container-width-fix text-right tm-header-content">
             <img src="../user/img/clinic/Laptop.png" class="clinic-img d-none d-lg-block" alt="Laptop" />
@@ -29,7 +29,7 @@
         <!--======= CLINIC =====-->
         <div id="section-i" class="tm-bg-white tm-pt-20">
           <div class="container">
-              <div class="row">
+              <div class="row d-flex justify-content-center align-item-center">
                   <div class="col-sm-10 col-md-10 col-lg-8 col-xl-8 p-5 mt-5">
                       <div class="tm-section-title">Merkezimi Neden Dialysing.com'da Listelemeliyim?</div>
                       <div class="clinic-content "> 
