--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -16,7 +16,7 @@
             <!-- <div class="inner-content"> -->
               <div class="tm-header-title mt-5">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
               <div class="tm-header-text">Sizlerde kliniğinizi sistemimize dahil ederek Dialysing.com ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
-              <a href="/panel/choose-personel"><button class="btn-second">Merkezinizi Ekleyin</button></a>
+              <a href="clinic-panel/pages/clinic-login"><button class="btn-second">Merkezinizi Ekleyin</button></a>
             </div> 
           <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 banner ie-container-width-fix text-right tm-header-content">
             <img src="../user/img/clinic/Laptop.png" class="clinic-img d-none d-lg-block" alt="Laptop" />
