--- a/src/views/clinic-panel/pages/add-clinic/company-information.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/company-information.ejs
@@ -50,19 +50,19 @@
           <form class="tm-form-wide" action="/panel/choose-address" method="POST">
             <div class="form-group">
               <label for="company-name">Şirket İsmi</label>
-              <input type="text" class="form-control" id="companyName" name="companyName" value="<%- center.companyInformation.companyName || ""  %>"  placeholder="Şirket İsmi" />
+              <input type="text" class="form-control" id="companyName" name="companyName" value="<%- center.companyInformation.companyName || "" %>" placeholder="Şirket İsmi" />
             </div>
             <div class="form-group">
               <label for="company-address">Şirket Adresi</label>
-              <input type="text" class="form-control" id="adressDetailText" name="adressDetailText" value="<%- center.adress.adressDetailText || ""  %>" placeholder="Şirket Adresi" />
+              <input type="text" class="form-control" id="addressDetailText" name="addressDetailText" value="<%- center.address.addressDetailText || "" %>" placeholder="Şirket Adresi" />
             </div>
             <div class="form-group">
               <label for="tax-number">Vergi Numarası</label>
-              <input type="text" class="form-control" id="taxNumber" name="taxNumber" value="<%- center.companyInformation.taxNumber || ""  %>" placeholder="Vergi Numarası" />
+              <input type="text" class="form-control" id="taxNumber" name="taxNumber" value="<%- center.companyInformation.taxNumber || "" %>" placeholder="Vergi Numarası" />
             </div>
             <div class="form-group">
               <label for="tax-center-number">Vergi Dairesi Numarası</label>
-              <input type="text" class="form-control" id="taxOffice" name="taxOffice" value="<%- center.companyInformation.taxOffice || ""  %>" placeholder="Vergi Dairesi Numarası" />
+              <input type="text" class="form-control" id="taxOffice" name="taxOffice" value="<%- center.companyInformation.taxOffice || "" %>" placeholder="Vergi Dairesi Numarası" />
             </div>
             <div class="tm-text-info">Merkezin sizin olduğunu doğrulayabilmemiz için bu bilgilerin doğru ve eksiksiz girildiğinden emin olun.</div>
             <div class="tm-button-next left">
