--- a/src/views/clinic-panel/pages/panel/canceled-rezervations.ejs
+++ b/src/views/clinic-panel/pages/panel/canceled-rezervations.ejs
@@ -33,7 +33,7 @@
                                 <th><span><%- appointment.phone %> </span></th>
                               </tr>
                               <tr>
-                                <td><span><%- appointment.adress.adressDetailText %></span></td>
+                                <td><span><%- appointment.address.addressDetailText %></span></td>
                                 <td><span><%- appointment.insurance %></span></td>
                               </tr>
                             </table>
