--- a/src/views/clinic-panel/pages/panel/change-password.ejs
+++ b/src/views/clinic-panel/pages/panel/change-password.ejs
@@ -5,20 +5,20 @@
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <div class="tm-section-title">Şifre Değiştirme</div>
-                <form class="tm-form-wide">
+                <form class="tm-form-wide" action="/panel/change-password" method="POST">
                     <div class="form-group password">
                         <label for="old-password">Şifrenizi Giriniz</label>
-                        <input type="password" class="form-control" id="old-password" placeholder="Eski Şifreniz">
+                        <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Eski Şifreniz">
                         <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
                       </div>
                     <div class="form-group password">
                       <label for="new-password">Yeni Şifrenizi Oluşturun</label>
-                      <input type="password" class="form-control" id="new-password" placeholder="Yeni Şifreniz">
+                      <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="Yeni Şifreniz">
                       <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
                     </div>
                     <div class="form-group password">
                         <label for="repeat-password">Yeni Şifrenizi Tekrar Girin</label>
-                        <input type="password" class="form-control" id="repeat-password" placeholder="Yeni Şifreniz">
+                        <input type="password" class="form-control" id="repeatPassword" name="repeatPassword" placeholder="Yeni Şifreniz">
                         <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
                       </div>
                     <button type="submit" class="btn-second">Giriş Yap</button>
