--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -39,16 +39,16 @@
       <a class="nav-link" data-bs-toggle="collapse" href="#inbox" aria-expanded="false" aria-controls="inbox"> <img src="../clinic-panel/images/icons/Message.png" alt="Message Icon" /><span class="menu-title">Gelen Kutusu</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="inbox">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"><a class="nav-link" href="./rezervation-messages.html">Rezervasyon Mesajları</a></li>
-          <li class="nav-item"><a class="nav-link" href="./dialysing.com-messages.html">Dialysing.com Mesajları</a></li>
-          <li class="nav-item"><a class="nav-link" href="./questions-answered.html">Merkezinize Gelen Sorular</a></li>
-          <li class="nav-item"><a class="nav-link" href="./evaluation.html">Merkezinize Değerlendirmeleri</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/rezervation-messages">Rezervasyon Mesajları</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/messages">Dialysing.com Mesajları</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/questions-answered">Merkezinize Gelen Sorular</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/evaluation">Merkezinize Değerlendirmeleri</a></li>
         </ul>
       </div>
     </li>
     <!--=====Cleander=====-->
     <li class="nav-item">
-      <a class="nav-link" href="./calendar.html">
+      <a class="nav-link" href="/panel/calender">
         <img src="../clinic-panel/images/icons/Calendar.png" alt="Calendar Icon" />
         <span class="menu-title">Takvim</span>
       </a>
@@ -72,11 +72,11 @@
       </a>
       <div class="collapse" id="settings">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"><a class="nav-link" href="./change-password.html">Şifreyi Değiştir</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact.html">İletişim Bilgileri</a></li>
-          <li class="nav-item"><a class="nav-link" href="./add-new-clinic.html">Yeni Tesis Ekleme</a></li>
-          <li class="nav-item"><a class="nav-link" href="./add-user.html">Kullanıcı Ekleme</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Çıkış Yap</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/change-password">Şifreyi Değiştir</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/contact">İletişim Bilgileri</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/add-new-clinic">Yeni Tesis Ekleme</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/add-user">Kullanıcı Ekleme</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/logout">Çıkış Yap</a></li>
         </ul>
       </div>
     </li>
