--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -12,7 +12,7 @@
                     <div class="col-sm-12 col-md-8 col-lg-7 col-xl-7">
                         <div class="tm-section-title"><%- center.companyInformation.companyName  %> </div> 
                           <div class="d-flex center-address">
-                            <div class="flex-grow-1"><p class="tm-color-shadow"><i class="bi bi-geo-alt-fill"></i> <%- center.adress.adressDetailText  %> </p></div>
+                            <div class="flex-grow-1"><p class="tm-color-shadow"><i class="bi bi-geo-alt-fill"></i> <%- center.address.addressDetailText  %> </p></div>
                             <div class="flex-shrink-1 center-call"><a href="tel:<%-center.contactInformation.phone %>"><p><i class="bi bi-telephone-fill"></i> Merkezi Ara</p></a></div>
                           </div>
                           
