--- a/src/views/user/pages/user.ejs
+++ b/src/views/user/pages/user.ejs
@@ -29,7 +29,7 @@
                 <li class="widget-49-meeting-item-1"><span><%- appointment.treatmentMethod %> </span></li>
                 <li class="widget-49-meeting-item"><span><%- appointment.email %> </span></li>
                 <li class="widget-49-meeting-item"><span><%- appointment.phone %> </span></li>
-                <li class="widget-49-meeting-item"><span><%- appointment.adress.adressDetailText %> </span></li>
+                <li class="widget-49-meeting-item"><span><%- appointment.address.addressDetailText %> </span></li>
                 <li class="widget-49-meeting-item"><span><%- appointment.insurance %> </span></li>
               </ul>
             </div>
