--- a/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
@@ -32,19 +32,19 @@
           <form class="tm-form-wide" action="/panel/address-correction" method="POST">
             <div class="form-group">
               <label for="country-name">Ülke</label>
-              <input type="text" class="form-control" name="country" id="country" value="<%- center.adress.country || ""  %>" placeholder="Ülke" />
+              <input type="text" class="form-control" name="country" id="country" value="<%- center.address.country || ""  %>" placeholder="Ülke" />
             </div>
             <div class="form-group">
               <label for="city-name">İl</label>
-              <input type="text" class="form-control" name="city" id="city" value="<%- center.adress.city || ""  %>" placeholder="İl" />
+              <input type="text" class="form-control" name="city" id="city" value="<%- center.address.city || ""  %>" placeholder="İl" />
             </div>
             <div class="form-group">
               <label for="address">Adres</label>
-              <input type="text" class="form-control" name="adressDetailText" id="address" value="<%- center.adress.adressDetailText || ""  %>" placeholder="Adres" />
+              <input type="text" class="form-control" name="addressDetailText" id="address" value="<%- center.address.addressDetailText || ""  %>" placeholder="Adres" />
             </div>
             <div class="form-group">
               <label for="tax-center-number">Posta Kodu</label>
-              <input type="number" class="form-control" name="zipCode" id="zipCode" value="<%- center.adress.zipCode || ""  %>" placeholder="Posta Kodu" />
+              <input type="number" class="form-control" name="zipCode" id="zipCode" value="<%- center.address.zipCode || ""  %>" placeholder="Posta Kodu" />
             </div>
           
         </div>
