--- a/src/views/clinic-panel/pages/panel/completed-rezervations.ejs
+++ b/src/views/clinic-panel/pages/panel/completed-rezervations.ejs
@@ -33,7 +33,7 @@
                                 <th><span><%- appointment.phone %> </span></th>
                               </tr>
                               <tr>
-                                <td><span><%- appointment.adress.adressDetailText %></span></td>
+                                <td><span><%- appointment.address.addressDetailText %></span></td>
                                 <td><span><%- appointment.insurance %></span></td>
                               </tr>
                             </table>
@@ -55,7 +55,6 @@
                     </div>
                     <div class="tm-space-between">
                       <!-- <div class="warning left">Tatil Diyalizi Rezervasyonudur.</div> -->
-
                     </div>
                   </div>
                 </div>
