--- a/src/views/clinic-panel/pages/panel/contact.ejs
+++ b/src/views/clinic-panel/pages/panel/contact.ejs
@@ -4,30 +4,30 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="tm-section-title">İletişim Bilgileri</div>
-          <form class="tm-form-wide">
+          <form class="tm-form-wide" action="/panel/contact" method="POST">
             <div class="form-group">
               <label for="phone">Merkezinizin Telefon Numarasını Giriniz</label>
-              <input type="tel" class="form-control" id="phone" placeholder="Telefon Numarası" />
+              <input type="tel" class="form-control" id="phone" name="phone" value="<%- center.contactInformation.phone || ""  %>" placeholder="Telefon Numarası" />
             </div>
             <div class="form-group">
               <label for="phone">Alternatif Telefon Numarası Giriniz</label>
-              <input type="tel" class="form-control" id="phone" placeholder="Telefon Numarası" />
+              <input type="tel" class="form-control" id="alternativePhone" name="alternativePhone" value="<%- center.contactInformation.alternativePhone || ""  %>" placeholder="Telefon Numarası" />
             </div>
             <div class="form-group">
               <label for="email">Merkezinizin İletişim Mailini Girininiz</label>
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
+              <input type="email" class="form-control" id="email" name="email" value="<%- center.contactInformation.email || ""  %>" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
             </div>
             <div class="form-group">
               <label for="email-repeat">Alternatif Mail Adresinizi Giriniz</label>
-              <input type="email" class="form-control" id="email-repeat" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
+              <input type="email" class="form-control" id="alternativeEmail" name="alternativeEmail" value="<%- center.contactInformation.alternativeEmail || ""  %>" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
             </div>
             <div class="form-group">
               <label for="website">Websitesi</label>
-              <input type="text" class="form-control" id="website" placeholder="Websitesi" />
+              <input type="text" class="form-control" id="website" name="website" value="<%- center.contactInformation.website || "" %>" placeholder="Websitesi" />
             </div>
             <div class="form-group">
               <label for="address">Adres Bilgileri</label>
-              <input type="text" class="form-control" id="address" placeholder="Adres Bilgileri" />
+              <input type="text" class="form-control" id="addressDetailText" name="addressDetailText" value="<%- center.address.addressDetailText || "" %>"placeholder="Adres Bilgileri" />
             </div>
             <button type="submit" class="btn-second">Değişiklikleri Kaydet</button>
           </form>
